--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -4,26 +4,26 @@
   "main": "./index.ts",
   "types": "./index.ts",
   "scripts": {
-    "analyze": "prisma generate --no-hints",
-    "build": "prisma generate --no-hints",
+    "generate": "drizzle-kit generate:pg",
+    "migrate": "bun run migrate.ts",
+    "push": "drizzle-kit push:pg",
+    "studio": "drizzle-kit studio",
     "clean": "git clean -xdf .cache .turbo dist node_modules",
-    "typecheck": "tsc --noEmit --emitDeclarationOnly false"
+    "typecheck": "tsc --noEmit --emitDeclarationOnly false",
+    "seed": "tsx seed.ts",
+    "db:setup": "bun run generate && bun run migrate && bun run seed"
   },
   "dependencies": {
     "@neondatabase/serverless": "^0.10.4",
-    "@prisma/adapter-neon": "^6.0.1",
-    "@prisma/client": "6.0.1",
+    "drizzle-orm": "^0.29.3",
+    "pg": "^8.11.3",
     "@repo/env": "workspace:*",
-    "server-only": "^0.0.1",
-    "undici": "^7.1.0",
-    "ws": "^8.18.0"
+    "server-only": "^0.0.1"
   },
   "devDependencies": {
+    "drizzle-kit": "^0.20.14",
+    "@types/pg": "^8.10.9",
     "@repo/typescript-config": "workspace:*",
-    "@types/node": "22.10.1",
-    "@types/ws": "^8.5.13",
-    "bufferutil": "^4.0.8",
-    "prisma": "6.0.1",
-    "typescript": "^5.7.2"
+    "typescript": "^5.0.0"
   }
 }
