chore(deps): add core dependencies
- Add database tools:
  • drizzle-orm for database ORM
  • drizzle-kit for migrations
- Add logging utilities:
  • pino for structured logging
  • pino-pretty for development
- Add dotenv for environment management

--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,11 @@ yarn-error.log*
 
 # BaseHub
 .basehub
+
+# Environment
+.env
+.env*.local
+!.env.example
+
+# Keep app-specific examples
+!apps/*/.env.example
