--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -18,7 +18,8 @@
     "drizzle-orm": "^0.29.3",
     "pg": "^8.11.3",
     "@repo/env": "workspace:*",
-    "server-only": "^0.0.1"
+    "server-only": "^0.0.1",
+    "ioredis": "^5.3.2"
   },
   "devDependencies": {
     "drizzle-kit": "^0.20.14",
