--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "commander": "^12.1.0",
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.38.2",
+    "ioredis": "^5.4.2",
     "kleur": "^4.1.5",
     "pg": "^8.13.1",
     "pino": "^9.5.0"
