--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -39,7 +39,8 @@
     "sqip": "1.0.0-alpha.51",
     "sqip-plugin-data-uri": "1.0.0-alpha.52",
     "sqip-plugin-primitive": "1.0.0-alpha.53",
-    "sqip-plugin-svgo": "1.0.0-alpha.54"
+    "sqip-plugin-svgo": "1.0.0-alpha.54",
+    "framer-motion": "^11.0.0"
   },
   "devDependencies": {
     "@repo/typescript-config": "workspace:*",
