--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -7,15 +7,17 @@
     "typecheck": "tsc --noEmit --emitDeclarationOnly false"
   },
   "dependencies": {
-    "@clerk/nextjs": "^6.9.0",
-    "@clerk/themes": "^2.2.0",
+    "@repo/database": "workspace:*",
+    "@repo/email": "workspace:*",
+    "@repo/env": "workspace:*",
     "@repo/tailwind-config": "workspace:*",
+    "better-auth": "^1.1.3",
+    "next-auth": "5.0.0-beta.25",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "server-only": "^0.0.1"
   },
   "devDependencies": {
-    "@clerk/types": "^4.39.2",
     "@repo/typescript-config": "workspace:*",
     "@types/node": "22.10.1",
     "@types/react": "19.0.1",
