--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -3,6 +3,16 @@
   "version": "0.0.0",
   "main": "./index.ts",
   "types": "./index.ts",
+  "exports": {
+    ".": {
+      "types": "./index.ts",
+      "default": "./index.ts"
+    },
+    "./schema": {
+      "types": "./schema/index.ts",
+      "default": "./schema/index.ts"
+    }
+  },
   "scripts": {
     "generate": "drizzle-kit generate:pg",
     "migrate": "bun run migrate.ts",
