--- a/packages/ui-utils/package.json
+++ b/packages/ui-utils/package.json
@@ -9,11 +9,12 @@
     "typecheck": "tsc --noEmit --emitDeclarationOnly false"
   },
   "dependencies": {
-    "motion": "^11.15.0",
+    "@studio-freight/lenis": "^1.0.42",
     "gsap": "^3.12.5",
-	"use-sound":"^4.0.3",
-	"@studio-freight/lenis":"^1.0.42",
-    "react": "^19.0.0"
+    "lenis": "^1.1.18",
+    "motion": "^11.15.0",
+    "react": "^19.0.0",
+    "use-sound": "^4.0.3"
   },
   "devDependencies": {
     "@repo/typescript-config": "workspace:*",
