chore(deps): standardize package management to pnpm
- Remove bun.lockb to avoid lock file conflicts
- Update workspace dependencies in package.json
- Configure turbo pipeline for pnpm
- Standardize scripts across workspaces

--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
   },
   "files": ["scripts/init.mjs"],
   "scripts": {
-    "web": "turbo dev --filter=web",
-    "app": "turbo dev --filter=app",
-    "email": "turbo dev --filter=email",
-    "studio": "turbo dev --filter=studio",
-    "storybook": "turbo dev --filter=storybook",
+    "web": "turbo run web#dev --filter=web...",
+    "app": "turbo run dev --filter=app...",
+    "email": "turbo run dev --filter=email...",
+    "studio": "turbo run dev --filter=studio...",
+    "storybook": "turbo run dev --filter=storybook...",
     "build": "turbo build",
     "dev": "turbo dev",
     "lint": "ultracite lint",
@@ -19,7 +19,7 @@
     "analyze": "turbo analyze",
     "bump-deps": "npx npm-check-updates --deep -u -x react-day-picker && pnpm install",
     "bump-ui": "npx shadcn@latest add --all --overwrite -c packages/design-system",
-    "migrate": "cd packages/database && npx prisma format && npx prisma generate && npx prisma db push",
+    "migrate": "cd packages/database && pnpm drizzle-kit generate && pnpm migrate.ts && pnpm drizzle-kit push",
     "clean": "git clean -xdf node_modules",
     "docker:dev": "docker compose -f docker-compose.yml -f docker-compose.dev.yml up",
     "docker:build": "docker compose -f docker-compose.yml build",
@@ -44,7 +44,7 @@
   },
   "packageManager": "pnpm@9.15.0",
   "dependencies": {
-    "@studio-freight/lenis": "^1.0.42",
+    "lenis": "^1.1.18",
     "commander": "^12.1.0",
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.38.2",
