--- a/packages/design-system/package.json
+++ b/packages/design-system/package.json
@@ -49,9 +49,11 @@
     "geist": "^1.3.1",
     "input-otp": "^1.4.1",
     "lucide-react": "^0.468.0",
+    "next": "^15.1.3",
     "next-themes": "^0.4.4",
     "react": "19.0.0",
     "react-day-picker": "^9.5.0",
+    "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.0",
     "react-moveable": "^0.56.0",
     "react-resizable-panels": "^2.1.7",
