chore(web): update core configurations
- Update middleware for i18n support
- Configure Next.js for internationalization
- Update package dependencies
- Update SEO metadata
- Update tailwind configuration

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -16,21 +16,25 @@
     "@repo/design-system": "workspace:*",
     "@repo/email": "workspace:*",
     "@repo/env": "workspace:*",
-    "@repo/ui-utils": "workspace:*",
     "@repo/feature-flags": "workspace:*",
     "@repo/next-config": "workspace:*",
     "@repo/observability": "workspace:*",
     "@repo/rate-limit": "workspace:*",
     "@repo/seo": "workspace:*",
     "@repo/tailwind-config": "workspace:*",
+    "@repo/ui-utils": "workspace:*",
     "@sentry/nextjs": "^8.43.0",
     "date-fns": "^4.1.0",
+    "framer-motion": "^11.0.0",
     "fumadocs-core": "^14.6.0",
+    "gsap": "^3.12.5",
     "import-in-the-middle": "^1.11.3",
     "lucide-react": "^0.468.0",
     "mdx-bundler": "^10.0.3",
     "next": "15.1.0",
+    "next-intl": "^3.26.3",
     "react": "19.0.0",
+    "react-country-flag": "^3.1.0",
     "react-dom": "19.0.0",
     "react-wrap-balancer": "^1.1.1",
     "reading-time": "^1.5.0",
@@ -41,7 +45,7 @@
     "sqip-plugin-data-uri": "1.0.0-alpha.52",
     "sqip-plugin-primitive": "1.0.0-alpha.53",
     "sqip-plugin-svgo": "1.0.0-alpha.54",
-    "framer-motion": "^11.0.0"
+    "zustand": "^5.0.2"
   },
   "devDependencies": {
     "@repo/typescript-config": "workspace:*",
