--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@arcjet/next": "1.0.0-alpha.34",
+    "@paper-design/shaders-react": "^0.0.19",
     "@radix-ui/react-icons": "^1.3.2",
     "@repo/cms": "workspace:*",
     "@repo/design-system": "workspace:*",
@@ -52,6 +53,7 @@
     "@types/node": "22.10.1",
     "@types/react": "19.0.2",
     "@types/react-dom": "19.0.2",
+    "tailwind-scrollbar": "^4.0.0",
     "tailwindcss": "^3.4.16",
     "typescript": "^5.7.2"
   }
