--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -1,40 +1,45 @@
 {
-  "name": "@repo/database",
-  "version": "0.0.0",
-  "main": "./index.ts",
-  "types": "./index.ts",
-  "exports": {
-    ".": {
-      "types": "./index.ts",
-      "default": "./index.ts"
-    },
-    "./schema": {
-      "types": "./schema/index.ts",
-      "default": "./schema/index.ts"
-    }
-  },
-  "scripts": {
-    "generate": "drizzle-kit generate:pg",
-    "migrate": "bun run migrate.ts",
-    "push": "drizzle-kit push:pg",
-    "studio": "drizzle-kit studio",
-    "clean": "git clean -xdf .cache .turbo dist node_modules",
-    "typecheck": "tsc --noEmit --emitDeclarationOnly false",
-    "seed": "tsx seed.ts",
-    "db:setup": "bun run generate && bun run migrate && bun run seed"
-  },
   "dependencies": {
     "@neondatabase/serverless": "^0.10.4",
-    "drizzle-orm": "^0.29.3",
-    "pg": "^8.11.3",
     "@repo/env": "workspace:*",
-    "server-only": "^0.0.1",
-    "ioredis": "^5.3.2"
+    "@repo/logger": "workspace:*",
+    "drizzle-orm": "^0.39.1",
+    "ioredis": "^5.3.2",
+    "pg": "^8.11.3",
+    "server-only": "^0.0.1"
   },
   "devDependencies": {
-    "drizzle-kit": "^0.20.14",
-    "@types/pg": "^8.10.9",
     "@repo/typescript-config": "workspace:*",
+    "@types/pg": "^8.10.9",
+    "drizzle-kit": "^0.30.4",
     "typescript": "^5.0.0"
-  }
+  },
+  "exports": {
+    ".": {
+      "default": "./index.ts",
+      "types": "./index.ts"
+    },
+    "./schema": {
+      "default": "./schema/index.ts",
+      "types": "./schema/index.ts"
+    },
+    "./types": {
+      "default": "./types.ts",
+      "types": "./types.ts"
+    }
+  },
+  "main": "./index.ts",
+  "name": "@repo/database",
+  "scripts": {
+    "clean": "git clean -xdf .cache .turbo dist node_modules",
+    "db:setup": "bun run generate && bun run migrate && bun run seed",
+    "generate": "drizzle-kit generate --out ./migrations --schema ./schema/index.ts --dialect postgresql",
+    "migrate": "bun run migrate.ts",
+    "push": "drizzle-kit push",
+    "seed": "tsx seed.ts",
+    "studio": "drizzle-kit studio",
+    "typecheck": "tsc --noEmit --emitDeclarationOnly false"
+  },
+  "types": "./index.ts",
+  "version": "0.0.0"
 }
