--- a/packages/ui-utils/package.json
+++ b/packages/ui-utils/package.json
@@ -9,6 +9,7 @@
     "typecheck": "tsc --noEmit --emitDeclarationOnly false"
   },
   "dependencies": {
+    "@paper-design/shaders-react": "^0.0.19",
     "@studio-freight/lenis": "^1.0.42",
     "gsap": "^3.12.5",
     "lenis": "^1.1.18",
