--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -11,7 +11,8 @@
     "@repo/email": "workspace:*",
     "@repo/env": "workspace:*",
     "@repo/tailwind-config": "workspace:*",
-    "better-auth": "^1.1.3",
+    "better-auth": "^1.1.15",
+    "next": "^15.1.6",
     "next-auth": "5.0.0-beta.25",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
