--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "files": ["scripts/init.mjs"],
   "scripts": {
     "web": "turbo run web#dev --filter=web...",
-    "app": "turbo run dev --filter=app...",
+    "app": "turbo run app#dev --filter=app...",
     "email": "turbo run dev --filter=email...",
     "studio": "turbo run dev --filter=studio...",
     "storybook": "turbo run dev --filter=storybook...",
@@ -33,7 +33,7 @@
     "@repo/typescript-config": "workspace:*",
     "@turbo/gen": "^2.3.3",
     "@types/pg": "^8.11.10",
-    "drizzle-kit": "^0.30.1",
+    "drizzle-kit": "^0.30.4",
     "tsx": "^4.19.2",
     "turbo": "^2.3.3",
     "typescript": "^5.7.2",
@@ -44,13 +44,13 @@
   },
   "packageManager": "pnpm@9.15.0",
   "dependencies": {
-    "lenis": "^1.1.18",
     "commander": "^12.1.0",
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.38.2",
     "gsap": "^3.12.5",
     "ioredis": "^5.4.2",
     "kleur": "^4.1.5",
+    "lenis": "^1.1.18",
     "motion": "^11.15.0",
     "next-auth": "^5.0.0-beta.25",
     "pg": "^8.13.1",
