--- a/apps/app/tsconfig.json
+++ b/apps/app/tsconfig.json
@@ -4,6 +4,7 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["./*"],
+      "@sentry": ["./sentry"],
       "@repo/*": ["../../packages/*"]
     }
   },
@@ -13,5 +14,6 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts"
-  ]
+  ],
+  "exclude": ["node_modules"]
 }
