--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -1,16 +1,8 @@
 {
-  "name": "app",
-  "private": true,
-  "scripts": {
-    "dev": "next dev -p 3000 --turbopack",
-    "build": "next build",
-    "start": "next start",
-    "analyze": "ANALYZE=true pnpm build",
-    "test": "vitest run",
-    "clean": "git clean -xdf .cache .turbo dist node_modules",
-    "typecheck": "tsc --noEmit --emitDeclarationOnly false"
-  },
   "dependencies": {
+    "@arcjet/ip": "1.0.0-beta.2",
+    "@arcjet/next": "1.0.0-alpha.34",
+    "@hookform/resolvers": "^3.9.1",
     "@prisma/client": "6.0.1",
     "@repo/analytics": "workspace:*",
     "@repo/auth": "workspace:*",
@@ -19,20 +11,26 @@
     "@repo/design-system": "workspace:*",
     "@repo/env": "workspace:*",
     "@repo/feature-flags": "workspace:*",
+    "@repo/logger": "workspace:*",
     "@repo/next-config": "workspace:*",
     "@repo/security": "workspace:*",
     "@repo/seo": "workspace:*",
     "@repo/tailwind-config": "workspace:*",
+    "@repo/ui-utils": "workspace:*",
     "@repo/webhooks": "workspace:*",
     "@sentry/nextjs": "^8.43.0",
+    "better-auth": "^1.1.3",
     "fuse.js": "^7.0.0",
     "import-in-the-middle": "^1.11.3",
     "lucide-react": "^0.468.0",
+    "motion": "^11.15.0",
     "next": "15.1.0",
     "next-themes": "^0.4.4",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "require-in-the-middle": "^7.4.0"
+    "react-hook-form": "^7.54.0",
+    "require-in-the-middle": "^7.4.0",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@repo/testing": "workspace:*",
@@ -46,5 +44,16 @@
     "tailwindcss": "^3.4.16",
     "typescript": "^5.7.2",
     "vitest": "^2.1.8"
+  },
+  "name": "app",
+  "private": true,
+  "scripts": {
+    "analyze": "ANALYZE=true pnpm build",
+    "build": "next build",
+    "clean": "git clean -xdf .cache .turbo dist node_modules",
+    "dev": "next dev -p 3000 --turbopack",
+    "start": "next start",
+    "test": "vitest run",
+    "typecheck": "tsc --noEmit --emitDeclarationOnly false"
   }
 }
