--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "bin": {
     "next-forge": "scripts/init.mjs"
   },
-  "files": ["scripts/init.mjs"],
+  "files": [
+    "scripts/init.mjs"
+  ],
   "scripts": {
     "web": "turbo run web#dev --filter=web...",
     "app": "turbo run app#dev --filter=app...",
@@ -31,13 +33,13 @@
     "@auto-it/first-time-contributor": "^11.3.0",
     "@biomejs/biome": "1.9.4",
     "@repo/typescript-config": "workspace:*",
-    "@turbo/gen": "^2.3.3",
-    "@types/pg": "^8.11.10",
+    "@turbo/gen": "^2.4.1",
+    "@types/pg": "^8.11.11",
     "drizzle-kit": "^0.30.4",
     "tsx": "^4.19.2",
-    "turbo": "^2.3.3",
-    "typescript": "^5.7.2",
-    "ultracite": "^4.1.12"
+    "turbo": "^2.4.1",
+    "typescript": "^5.7.3",
+    "ultracite": "^4.1.18"
   },
   "engines": {
     "node": ">=18"
@@ -46,18 +48,21 @@
   "dependencies": {
     "commander": "^12.1.0",
     "dotenv": "^16.4.7",
-    "drizzle-orm": "^0.38.2",
-    "gsap": "^3.12.5",
-    "ioredis": "^5.4.2",
+    "drizzle-orm": "^0.38.4",
+    "gsap": "^3.12.7",
+    "ioredis": "^5.5.0",
     "kleur": "^4.1.5",
-    "lenis": "^1.1.18",
-    "motion": "^11.15.0",
-    "next-auth": "^5.0.0-beta.25",
-    "pg": "^8.13.1",
+    "lenis": "^1.1.20",
+    "motion": "^11.18.2",
+    "next-auth": "5.0.0-beta.25",
+    "pg": "^8.13.2",
     "pino": "^9.6.0",
     "use-sound": "^4.0.3"
   },
-  "workspaces": ["apps/*", "packages/*"],
+  "workspaces": [
+    "apps/*",
+    "packages/*"
+  ],
   "trustedDependencies": [
     "@biomejs/biome",
     "@clerk/shared",
