--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -36,10 +36,12 @@
     "@repo/testing": "workspace:*",
     "@repo/typescript-config": "workspace:*",
     "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.1.0",
     "@types/node": "22.10.1",
     "@types/react": "19.0.2",
     "@types/react-dom": "19.0.2",
+    "@types/testing-library__jest-dom": "^6.0.0",
     "jsdom": "^25.0.1",
     "tailwindcss": "^3.4.16",
     "typescript": "^5.7.2",
