--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -19,6 +19,7 @@
     "@repo/ui-utils": "workspace:*",
     "@repo/webhooks": "workspace:*",
     "@sentry/nextjs": "^8.43.0",
+    "@vercel/og": "^0.6.5",
     "better-auth": "^1.1.3",
     "fuse.js": "^7.0.0",
     "import-in-the-middle": "^1.11.3",
