--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -31,7 +31,8 @@
     "react-dom": "19.0.0",
     "react-hook-form": "^7.54.0",
     "require-in-the-middle": "^7.4.0",
-    "zod": "^3.24.1"
+    "zod": "^3.24.1",
+    "zustand": "^5.0.2"
   },
   "devDependencies": {
     "@repo/testing": "workspace:*",
