feat(lumin): implement advanced recommendation system with vector embeddings
- Add OpenAI embeddings for event and user vector generation
- Implement personalized recommendation engine with caching
- Integrate Upstash Vector for efficient similarity search
- Add rate limiting and CORS middleware
- Create interaction logging and event ingestion endpoints
- Introduce A/B testing and retry utility functions

--- a/apps/lumin/wrangler.toml
+++ b/apps/lumin/wrangler.toml
@@ -1,7 +1,6 @@
-
 name = "lumin"
 main = "src/index.ts"
-compatibility_date = "2025-02-24" # Today’s date
+compatibility_date = "2025-02-24" # Today's date
 workers_dev = true 
 account_id = "0095f5e80c93e8252a4019ae095d6848"
 
@@ -13,9 +12,14 @@ enabled = true
 [[d1_databases]]
 binding = "DB"
 database_name = "lumin-db"
-database_id = "04e9af85-e7bb-4930-abac-354c8a120232"
+database_id = "your-d1-namespace-id"
+
+[[kv_namespaces]]
+binding = "CACHE"
+id = "your_kv_namespace_id"
 
 [vars]
-OPENAI_KEY = ""
-VECTOR_URL=""
-VECTOR_TOKEN=""
+VECTOR_URL = ""
+VECTOR_TOKEN = ""
+MOBILE_APP_KEY = ""
+OPENAI_API_KEY = ""
