--- a/apps/lumin/package.json
+++ b/apps/lumin/package.json
@@ -5,10 +5,16 @@
     "deploy": "wrangler deploy --minify"
   },
   "dependencies": {
-    "hono": "^4.7.2"
+    "@upstash/vector": "^1.2.0",
+    "bcrypt-edge": "^0.1.0",
+    "hono": "^4.7.2",
+    "hono-rate-limiter": "^0.4.2",
+    "mathjs": "^14.2.1",
+    "openai": "^4.85.4",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
-    "@cloudflare/workers-types": "^4.20250214.0",
+    "@cloudflare/workers-types": "^4.20250224.0",
     "wrangler": "^3.109.2"
   }
 }
