--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -25,11 +25,11 @@
     "import-in-the-middle": "^1.11.3",
     "lucide-react": "^0.468.0",
     "motion": "^11.15.0",
-    "next": "15.1.0",
+    "next": "15.3.1-canary.15",
     "next-themes": "^0.4.4",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
-    "react-hook-form": "^7.54.0",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "react-hook-form": "^7.55.0",
     "require-in-the-middle": "^7.4.0",
     "zod": "^3.24.1",
     "zustand": "^5.0.2"
@@ -40,10 +40,10 @@
     "@testing-library/dom": "^10.4.0",
     "@testing-library/react": "^16.1.0",
     "@types/node": "22.10.1",
-    "@types/react": "19.0.2",
-    "@types/react-dom": "19.0.2",
+    "@types/react": "19.1.0",
+    "@types/react-dom": "19.1.1",
     "jsdom": "^25.0.1",
-    "tailwindcss": "^3.4.16",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5.7.2",
     "vitest": "^2.1.8"
   },
