--- a/package.json
+++ b/package.json
@@ -33,13 +33,13 @@
     "@auto-it/first-time-contributor": "^11.3.0",
     "@biomejs/biome": "1.9.4",
     "@repo/typescript-config": "workspace:*",
-    "@turbo/gen": "^2.4.1",
+    "@turbo/gen": "^2.5.0",
     "@types/pg": "^8.11.11",
-    "drizzle-kit": "^0.30.4",
-    "tsx": "^4.19.2",
-    "turbo": "^2.4.2",
-    "typescript": "^5.7.3",
-    "ultracite": "^4.1.18"
+    "drizzle-kit": "^0.30.6",
+    "tsx": "^4.19.3",
+    "turbo": "^2.5.0",
+    "typescript": "^5.8.2",
+    "ultracite": "^4.2.1"
   },
   "engines": {
     "node": ">=18"
@@ -48,16 +48,15 @@
   "dependencies": {
     "commander": "^12.1.0",
     "dotenv": "^16.4.7",
-    "drizzle-orm": "^0.38.4",
+    "drizzle-orm": "^0.39.3",
     "gsap": "^3.12.7",
-    "ioredis": "^5.5.0",
+    "ioredis": "^5.6.0",
     "kleur": "^4.1.5",
-    "lenis": "^1.1.20",
+    "lenis": "^1.2.3",
     "motion": "^11.18.2",
-    "next-auth": "5.0.0-beta.25",
-    "pg": "^8.13.2",
+    "pg": "^8.14.1",
     "pino": "^9.6.0",
-    "use-sound": "^4.0.3"
+    "use-sound": "^4.0.4"
   },
   "workspaces": [
     "apps/*",
@@ -68,10 +67,12 @@
     "@clerk/shared",
     "@prisma/client",
     "@sentry/cli",
+    "better-sqlite3",
     "core-js",
     "core-js-pure",
     "es5-ext",
     "esbuild",
-    "sharp"
+    "sharp",
+    "workerd"
   ]
 }
