chore(dependencies): update React and TypeScript types across multiple packages
- Bump React and React DOM versions to 19.1.0 in package.json files for email, analytics, cms, design-system, observability, seo, and ui-utils packages.
- Update TypeScript type definitions for React to 19.1.0 in the same packages to ensure compatibility with the latest React features.

--- a/packages/cms/package.json
+++ b/packages/cms/package.json
@@ -12,12 +12,13 @@
   "dependencies": {
     "@repo/env": "workspace:*",
     "basehub": "^7.5.28",
-    "react": "^19.0.0"
+    "react": "^19.1.0",
+    "react-dom": "19.1.0"
   },
   "devDependencies": {
     "@repo/typescript-config": "workspace:*",
     "@types/node": "22.10.1",
-    "@types/react": "19.0.2",
+    "@types/react": "19.1.0",
     "@types/react-dom": "^19.0.2",
     "next": "15.1.0"
   }
