--- a/apps/email/package.json
+++ b/apps/email/package.json
@@ -12,13 +12,14 @@
   "dependencies": {
     "@react-email/components": "0.0.31",
     "@repo/email": "workspace:*",
-    "react": "19.0.0",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
     "react-email": "3.0.4"
   },
   "devDependencies": {
     "@repo/typescript-config": "workspace:*",
     "@types/node": "22.10.1",
-    "@types/react": "19.0.2",
+    "@types/react": "19.1.0",
     "typescript": "^5.7.3"
   }
 }
