--- a/packages/analytics/package.json
+++ b/packages/analytics/package.json
@@ -12,13 +12,14 @@
     "@vercel/analytics": "^1.4.1",
     "posthog-js": "^1.195.0",
     "posthog-node": "^4.3.1",
-    "react": "^19.0.0",
+    "react": "^19.1.0",
+    "react-dom": "19.1.0",
     "server-only": "^0.0.1"
   },
   "devDependencies": {
     "@repo/typescript-config": "workspace:*",
     "@types/node": "22.10.1",
-    "@types/react": "19.0.2",
+    "@types/react": "19.1.0",
     "@types/react-dom": "^19.0.2"
   }
 }
