--- a/packages/seo/package.json
+++ b/packages/seo/package.json
@@ -8,14 +8,15 @@
   },
   "dependencies": {
     "lodash.merge": "^4.6.2",
-    "react": "^19.0.0",
+    "react": "^19.1.0",
+    "react-dom": "19.1.0",
     "schema-dts": "^1.1.2"
   },
   "devDependencies": {
     "@repo/typescript-config": "workspace:*",
     "@types/lodash.merge": "^4.6.9",
     "@types/node": "22.10.1",
-    "@types/react": "19.0.2",
+    "@types/react": "19.1.0",
     "@types/react-dom": "^19.0.2",
     "next": "15.1.0"
   }
