feat(lumin): enhance application with testing scripts and environment bindings
- Added new scripts for testing and coverage in package.json.
- Updated worker-configuration.d.ts to include additional Cloudflare bindings for database and KV namespaces.
- Modified wrangler.toml to rename a variable for clarity.
- Refactored index.ts to improve type definitions, error handling, and user interaction logging.
- Implemented new functions for generating embeddings and computing user vectors, enhancing recommendation capabilities.
- Improved search functionality and added error handling for various endpoints.

--- a/apps/lumin/package.json
+++ b/apps/lumin/package.json
@@ -2,7 +2,10 @@
   "name": "lumin",
   "scripts": {
     "dev": "wrangler dev",
-    "deploy": "wrangler deploy --minify"
+    "deploy": "wrangler deploy --minify",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "coverage": "vitest run --coverage"
   },
   "dependencies": {
     "@upstash/vector": "^1.2.0",
@@ -15,6 +18,8 @@
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20250224.0",
+    "@vitest/coverage-v8": "^3.1.2",
+    "vitest": "^3.1.2",
     "wrangler": "^3.109.2"
   }
 }
