--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -19,6 +19,9 @@
     "@repo/ui-utils": "workspace:*",
     "@repo/webhooks": "workspace:*",
     "@sentry/nextjs": "^8.43.0",
+    "@tanstack/react-query": "^5.74.4",
+    "@tanstack/react-query-devtools": "^5.74.4",
+    "@uploadthing/react": "^7.3.0",
     "@vercel/og": "^0.6.5",
     "better-auth": "^1.1.3",
     "fuse.js": "^7.0.0",
@@ -31,6 +34,7 @@
     "react-dom": "19.1.0",
     "react-hook-form": "^7.55.0",
     "require-in-the-middle": "^7.4.0",
+    "uploadthing": "^7.6.0",
     "zod": "^3.24.1",
     "zustand": "^5.0.2"
   },
