chore(dependencies): update React and TypeScript types for improved compatibility
- Upgraded React and React DOM to version 19.1.0 for enhanced performance and features.
- Updated TypeScript types for React and React DOM to version 19.1.3 to ensure type safety and compatibility with the latest React version.
- Adjusted package.json and pnpm-lock.yaml to reflect these changes and maintain consistency across the project.

--- a/package.json
+++ b/package.json
@@ -4,9 +4,7 @@
   "bin": {
     "next-forge": "scripts/init.mjs"
   },
-  "files": [
-    "scripts/init.mjs"
-  ],
+  "files": ["scripts/init.mjs"],
   "scripts": {
     "web": "turbo run web#dev --filter=web...",
     "app": "turbo run app#dev --filter=app...",
@@ -58,10 +56,7 @@
     "pino": "^9.6.0",
     "use-sound": "^4.0.4"
   },
-  "workspaces": [
-    "apps/*",
-    "packages/*"
-  ],
+  "workspaces": ["apps/*", "packages/*"],
   "trustedDependencies": [
     "@biomejs/biome",
     "@clerk/shared",
