--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -21,6 +21,7 @@
     "@sentry/nextjs": "^8.43.0",
     "@tanstack/react-query": "^5.74.4",
     "@tanstack/react-query-devtools": "^5.74.4",
+    "@types/react": "^19.1.2",
     "@uploadthing/react": "^7.3.0",
     "@vercel/og": "^0.6.5",
     "better-auth": "^1.1.3",
