--- a/packages/design-system/package.json
+++ b/packages/design-system/package.json
@@ -40,6 +40,7 @@
     "@repo/auth": "workspace:*",
     "@repo/env": "workspace:*",
     "@repo/observability": "workspace:*",
+    "@types/react-dom": "^19.1.3",
     "@vercel/toolbar": "^0.1.36",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -67,7 +68,7 @@
   "devDependencies": {
     "@repo/typescript-config": "workspace:*",
     "@types/node": "^22.14.0",
-    "@types/react": "^19.1.0",
+    "@types/react": "^19.1.2",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.3",
     "tailwindcss": "^3.4.17",
