--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
   },
   "packageManager": "pnpm@9.15.0",
   "dependencies": {
+    "@types/react": "^19.1.2",
+    "@types/react-dom": "^19.1.3",
     "commander": "^12.1.0",
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.39.3",
@@ -52,8 +54,11 @@
     "kleur": "^4.1.5",
     "lenis": "^1.2.3",
     "motion": "^11.18.2",
+    "next": "^15.4.0-canary.19",
     "pg": "^8.14.1",
     "pino": "^9.6.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "use-sound": "^4.0.4"
   },
   "workspaces": ["apps/*", "packages/*"],
