feat(biome): add linter configuration and update rules for improved code quality
- Introduced a linter configuration in biome.json to enforce coding standards.
- Added nursery rules to manage class sorting and updated existing rules for better code practices.
- Enhanced the linter settings in the app's biome.json to include a warning for console usage.

--- a/biome.json
+++ b/biome.json
@@ -4,6 +4,14 @@
   "javascript": {
     "globals": ["Liveblocks"]
   },
+  "linter": {
+    "enabled": true,
+    "rules": {
+      "nursery": {
+        "useSortedClasses": "off"
+      }
+    }
+  },
   "files": {
     "ignore": [
       "packages/design-system/components/ui/**",
