--- a/apps/app/biome.json
+++ b/apps/app/biome.json
@@ -7,7 +7,8 @@
     "enabled": true,
     "rules": {
       "suspicious": {
-        "useAwait": "off"
+        "useAwait": "off",
+        "noConsole": "warn"
       },
       "style": {
         "useBlockStatements": "error",
@@ -16,6 +17,9 @@
       "correctness": {
         "noUnusedVariables": "error",
         "noUndeclaredVariables": "error"
+      },
+      "nursery": {
+        "useSortedClasses": "off"
       }
     },
     "ignore": ["node_modules", ".next", "dist", "build"]
