--- a/apps/lumin/package.json
+++ b/apps/lumin/package.json
@@ -3,6 +3,7 @@
   "scripts": {
     "dev": "wrangler dev",
     "deploy": "wrangler deploy --minify",
+    "cf-typegen": "wrangler types --env-interface CloudflareBindings",
     "test": "vitest run",
     "test:watch": "vitest",
     "coverage": "vitest run --coverage"
@@ -20,6 +21,6 @@
     "@cloudflare/workers-types": "^4.20250224.0",
     "@vitest/coverage-v8": "^3.1.2",
     "vitest": "^3.1.2",
-    "wrangler": "^3.109.2"
+    "wrangler": "^4.4.0"
   }
 }
