--- a/apps/lumin/package.json
+++ b/apps/lumin/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@upstash/vector": "^1.2.0",
     "bcrypt-edge": "^0.1.0",
+    "dotenv": "^17.1.0",
+    "drizzle-orm": "0.39.3",
     "hono": "^4.7.2",
     "hono-rate-limiter": "^0.4.2",
     "mathjs": "^14.2.1",
@@ -18,9 +20,12 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
-    "@cloudflare/workers-types": "^4.20250224.0",
+    "@types/dotenv": "^8.2.3",
+    "@types/node": "^24.0.12",
     "@vitest/coverage-v8": "^3.1.2",
+    "drizzle-kit": "0.30.6",
+    "tsx": "^4.20.3",
     "vitest": "^3.1.2",
-    "wrangler": "^4.4.0"
+    "wrangler": "^4.24.3"
   }
 }
