feat(ts-config): added type specificity for vitest and removed cloudflare worker types

--- a/apps/lumin/tsconfig.json
+++ b/apps/lumin/tsconfig.json
@@ -6,8 +6,8 @@
     "strict": true,
     "skipLibCheck": true,
     "lib": ["ESNext"],
-    "types": ["@cloudflare/workers-types"],
     "jsx": "react-jsx",
-    "jsxImportSource": "hono/jsx"
+    "jsxImportSource": "hono/jsx",
+    "types": ["vitest/globals"]
   }
 }
