--- a/apps/lumin/drizzle.config.json
+++ b/apps/lumin/drizzle.config.json
@@ -1,6 +1,6 @@
 {
   "$schema": "https://www.drizzlekit.com/schema/v1.0.0",
-  "out": "./src/db/migrations",
+  "out": "./migrations",
   "schema": "./src/db/schema/index.ts",
   "dialect": "sqlite"
 }
