--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -2,8 +2,11 @@
   "dependencies": {
     "@arcjet/ip": "1.0.0-beta.2",
     "@arcjet/next": "1.0.0-alpha.34",
-    "@hookform/resolvers": "^3.9.1",
+    "@hookform/resolvers": "^3.10.0",
     "@prisma/client": "6.0.1",
+    "@react-email/components": "0.0.31",
+    "@react-email/render": "^1.2.3",
+    "@react-email/tailwind": "^1.2.2",
     "@repo/analytics": "workspace:*",
     "@repo/auth": "workspace:*",
     "@repo/collaboration": "workspace:*",
@@ -18,38 +21,38 @@
     "@repo/tailwind-config": "workspace:*",
     "@repo/ui-utils": "workspace:*",
     "@repo/webhooks": "workspace:*",
-    "@sentry/nextjs": "^8.43.0",
-    "@tanstack/react-query": "^5.74.4",
-    "@tanstack/react-query-devtools": "^5.74.4",
-    "@types/react": "^19.1.2",
-    "@uploadthing/react": "^7.3.0",
-    "@vercel/og": "^0.6.5",
-    "better-auth": "^1.1.3",
-    "fuse.js": "^7.0.0",
-    "import-in-the-middle": "^1.11.3",
+    "@sentry/nextjs": "^8.55.0",
+    "@tanstack/react-query": "^5.85.6",
+    "@tanstack/react-query-devtools": "^5.85.6",
+    "@types/react": "^19.1.12",
+    "@uploadthing/react": "^7.3.3",
+    "@vercel/og": "^0.6.8",
+    "better-auth": "^1.3.7",
+    "fuse.js": "^7.1.0",
+    "import-in-the-middle": "^1.14.2",
     "lucide-react": "^0.468.0",
-    "motion": "^11.15.0",
-    "next": "15.3.1-canary.15",
-    "next-themes": "^0.4.4",
+    "motion": "^11.18.2",
+    "next": "15.5.2",
+    "next-themes": "^0.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-hook-form": "^7.55.0",
-    "require-in-the-middle": "^7.4.0",
-    "uploadthing": "^7.6.0",
-    "zod": "^3.24.1",
-    "zustand": "^5.0.2"
+    "react-hook-form": "^7.62.0",
+    "require-in-the-middle": "^7.5.2",
+    "uploadthing": "^7.7.4",
+    "zod": "^3.25.76",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@repo/testing": "workspace:*",
     "@repo/typescript-config": "workspace:*",
-    "@testing-library/dom": "^10.4.0",
-    "@testing-library/react": "^16.1.0",
+    "@testing-library/dom": "^10.4.1",
+    "@testing-library/react": "^16.3.0",
     "@types/node": "22.10.1",
     "@types/react-dom": "19.1.3",
     "jsdom": "^25.0.1",
     "tailwindcss": "^3.4.17",
-    "typescript": "^5.7.2",
-    "vitest": "^2.1.8"
+    "typescript": "^5.9.2",
+    "vitest": "^2.1.9"
   },
   "name": "app",
   "private": true,
