--- a/packages/next-config/package.json
+++ b/packages/next-config/package.json
@@ -9,7 +9,7 @@
   "devDependencies": {
     "@repo/env": "workspace:*",
     "@repo/typescript-config": "workspace:*",
-    "next": "15.3.1-canary.15"
+    "next": "15.5.2"
   },
   "dependencies": {
     "@logtail/next": "^0.1.7",
