chore(dependencies): update various package versions including Next.js to 15.5.3, React types to 19.1.13, and improve workspace configuration; remove pnpm-lock.yaml file

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,3 +1,15 @@
 packages:
-  - "apps/*"
-  - "packages/*"
+  - apps/*
+  - packages/*
+
+onlyBuiltDependencies:
+  - '@biomejs/biome'
+  - '@prisma/client'
+  - '@sentry/cli'
+  - core-js
+  - core-js-pure
+  - es5-ext
+  - esbuild
+  - msgpackr-extract
+  - sharp
+  - workerd
