--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "bin": {
     "next-forge": "scripts/init.mjs"
   },
-  "files": ["scripts/init.mjs"],
+  "files": [
+    "scripts/init.mjs"
+  ],
   "scripts": {
     "web": "turbo run web#dev --filter=web...",
     "app": "turbo run app#dev --filter=app...",
@@ -29,39 +31,42 @@
   "devDependencies": {
     "@auto-it/all-contributors": "^11.3.0",
     "@auto-it/first-time-contributor": "^11.3.0",
-    "@biomejs/biome": "1.9.4",
+    "@biomejs/biome": "2.2.4",
     "@repo/typescript-config": "workspace:*",
-    "@turbo/gen": "^2.5.0",
-    "@types/pg": "^8.11.11",
-    "drizzle-kit": "^0.30.6",
-    "tsx": "^4.19.3",
-    "turbo": "^2.5.0",
-    "typescript": "^5.8.2",
-    "ultracite": "^4.2.1"
+    "@turbo/gen": "^2.5.6",
+    "@types/pg": "^8.15.5",
+    "drizzle-kit": "^0.31.4",
+    "tsx": "^4.20.5",
+    "turbo": "^2.5.6",
+    "typescript": "^5.9.2",
+    "ultracite": "^5.3.4"
   },
   "engines": {
     "node": ">=18"
   },
-  "packageManager": "pnpm@9.15.0",
+  "packageManager": "pnpm@10.16.1",
   "dependencies": {
-    "@types/react": "^19.1.2",
-    "@types/react-dom": "^19.1.3",
-    "commander": "^12.1.0",
-    "dotenv": "^16.4.7",
-    "drizzle-orm": "^0.39.3",
-    "gsap": "^3.12.7",
-    "ioredis": "^5.6.0",
+    "@types/react": "^19.1.13",
+    "@types/react-dom": "^19.1.9",
+    "commander": "^14.0.1",
+    "dotenv": "^17.2.2",
+    "drizzle-orm": "^0.44.5",
+    "gsap": "^3.13.0",
+    "ioredis": "^5.7.0",
     "kleur": "^4.1.5",
-    "lenis": "^1.2.3",
-    "motion": "^11.18.2",
-    "next": "^15.4.0-canary.19",
-    "pg": "^8.14.1",
-    "pino": "^9.6.0",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "use-sound": "^4.0.4"
+    "lenis": "^1.3.11",
+    "motion": "^12.23.12",
+    "next": "^15.5.3",
+    "pg": "^8.16.3",
+    "pino": "^9.9.5",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
+    "use-sound": "^5.0.0"
   },
-  "workspaces": ["apps/*", "packages/*"],
+  "workspaces": [
+    "apps/*",
+    "packages/*"
+  ],
   "trustedDependencies": [
     "@biomejs/biome",
     "@clerk/shared",
