--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
     "format": "ultracite format",
     "test": "turbo test",
     "analyze": "turbo analyze",
-    "bump-deps": "npx npm-check-updates --deep -u -x react-day-picker && pnpm install",
+    "bump-deps": "npx npm-check-updates --deep -u -x react-day-picker && bun install",
     "bump-ui": "npx shadcn@latest add --all --overwrite -c packages/design-system",
-    "migrate": "cd packages/database && pnpm drizzle-kit generate && pnpm migrate.ts && pnpm drizzle-kit push",
+    "migrate": "cd packages/database && bun drizzle-kit generate && bun migrate.ts && bun drizzle-kit push",
     "clean": "git clean -xdf node_modules",
     "docker:dev": "docker compose -f docker-compose.yml -f docker-compose.dev.yml up",
     "docker:build": "docker compose -f docker-compose.yml build",
@@ -44,10 +44,13 @@
   "engines": {
     "node": ">=18"
   },
-  "packageManager": "pnpm@10.16.1",
+  "packageManager": "bun@1.2.20",
   "dependencies": {
+    "@nosecone/next": "^1.0.0-beta.11",
+    "@t3-oss/env-nextjs": "^0.13.8",
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
+    "better-auth": "^1.3.13",
     "commander": "^14.0.1",
     "dotenv": "^17.2.2",
     "drizzle-orm": "^0.44.5",
