--- a/packages/feature-flags/package.json
+++ b/packages/feature-flags/package.json
@@ -10,10 +10,10 @@
     "@repo/auth": "workspace:*",
     "@repo/analytics": "workspace:*",
     "@repo/design-system": "workspace:*",
-    "@vercel/flags": "^2.6.3"
+    "@vercel/flags": "^3.1.1"
   },
   "peerDependencies": {
-    "next": "15.2.1"
+    "next": "^15.5.3"
   },
   "devDependencies": {
     "typescript": "^5.7.2",
