--- a/package.json
+++ b/package.json
@@ -34,37 +34,19 @@
     "@biomejs/biome": "2.2.4",
     "@repo/typescript-config": "workspace:*",
     "@turbo/gen": "^2.5.6",
-    "@types/pg": "^8.15.5",
-    "drizzle-kit": "^0.31.4",
+    "tsup": "^8.5.0",
     "tsx": "^4.20.5",
     "turbo": "^2.5.6",
     "typescript": "^5.9.2",
-    "ultracite": "^5.3.4"
+    "ultracite": "^5.4.5",
+    "vitest": "^3.1.4"
   },
   "engines": {
     "node": ">=18"
   },
   "packageManager": "bun@1.2.20",
   "dependencies": {
-    "@nosecone/next": "^1.0.0-beta.11",
-    "@t3-oss/env-nextjs": "^0.13.8",
-    "@types/react": "^19.1.13",
-    "@types/react-dom": "^19.1.9",
-    "better-auth": "^1.3.14",
-    "commander": "^14.0.1",
-    "dotenv": "^17.2.2",
-    "drizzle-orm": "^0.44.5",
-    "gsap": "^3.13.0",
-    "ioredis": "^5.7.0",
-    "kleur": "^4.1.5",
-    "lenis": "^1.3.11",
-    "motion": "^12.23.12",
-    "next": "^15.5.3",
-    "pg": "^8.16.3",
-    "pino": "^9.9.5",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
-    "use-sound": "^5.0.0"
+    "commander": "^14.0.1"
   },
   "workspaces": [
     "apps/*",
