--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -33,8 +33,8 @@
     "motion": "^11.18.2",
     "next": "15.5.4",
     "next-themes": "^0.4.6",
-    "react": "19.1.1",
-    "react-dom": "19.1.1",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
     "react-hook-form": "^7.62.0",
     "require-in-the-middle": "^7.5.2",
     "uploadthing": "^7.7.4",
@@ -43,12 +43,13 @@
   },
   "devDependencies": {
     "@repo/testing": "workspace:*",
-    "@types/react": "^19.1.12",
+    "@types/react": "^19.1.13",
+    "@types/react-dom": "^19.1.9",
     "@repo/typescript-config": "workspace:*",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/react": "^16.3.0",
     "@types/node": "22.10.1",
-    "@types/react-dom": "19.1.3",
+    "@types/react-dom": "19.1.9",
     "jsdom": "^25.0.1",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.9.2",
