--- a/package.json
+++ b/package.json
@@ -46,7 +46,11 @@
   },
   "packageManager": "bun@1.2.20",
   "dependencies": {
-    "commander": "^14.0.1"
+    "@types/react": "^19.1.13",
+    "@types/react-dom": "^19.1.9",
+    "commander": "^14.0.1",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1"
   },
   "workspaces": [
     "apps/*",
